--- a/src/components/mainIntersectionAnimations/envelope/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/envelope/styles.module.scss
@@ -11,13 +11,14 @@ $breakpoint-mobile: 420px;
 .envelopeContainer {
   position: relative;
   height: fit-content;
-  right: 20%;
-  top: 15%;
+
+  width: min-content;
   display: block;
   place-items: center;
+  transform: translate(-10vw, 200px);
 
   @media (max-width: $breakpoint-mobile) {
-    top: 5%;
+    transform: translate(-10vw, 75px);
   }
 }
 
@@ -134,37 +135,48 @@ $breakpoint-mobile: 420px;
     top: 0;
     height: 100%;
     width: 100%;
-    bottom: 100px;
     overflow: hidden;
     transform: translateY(-50%);
     transition-delay: 1s;
-    animation-name: openLetter;
+    animation-name: openLetterD;
     animation-fill-mode: forwards;
-    animation-duration: 6s;
-    animation-delay: 3s;
+    animation-duration: 4s;
+    animation-delay: 2s;
+
+    @media (max-width: $breakpoint-mobile) {
+      animation-name: openLetterM;
+    }
   }
 
-  @keyframes openLetter {
+  @keyframes openLetterD {
     0% {
       z-index: 10;
     }
     50% {
       z-index: 10;
       width: 100%;
-      height: min-content;
-      transform: scale(1.25);
+      height: 100%;
     }
     100% {
-      top: 50px;
       z-index: 10;
-      width: 30vw;
-      height: fit-content;
-      max-height: 400px;
-      transform: scale(1.5);
+      width: 77vw;
+      transform: translate(10vw, -200px);
+    }
+  }
 
-      @media (max-width: $breakpoint-mobile) {
-        top: -150px;
-      }
+  @keyframes openLetterM {
+    0% {
+      z-index: 10;
+    }
+    50% {
+      z-index: 10;
+      width: 100%;
+      height: 100%;
+    }
+    100% {
+      z-index: 10;
+      width: 100vw;
+      transform: translate(10vw, -75px);
     }
   }
 }
