--- a/src/components/mainIntersectionAnimations/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/styles.module.scss
@@ -1,7 +1,21 @@
+$breakpoint-mobile: 420px;
+
 .intersectionMainAnimationsContainer {
   width: 100%;
   height: 150vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.placeholder {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+
+  @media (max-width: $breakpoint-mobile) {
+    height: 100px;
+  }
 }
